Wed Dec  8 14:28:53 UTC 2010  Martin Corino  <corino_m@remedy.nl>

        * connectors/ami4ccm/tests/AsynchT/Sender/AsynchTA_conn_i.h:
        * connectors/ami4ccm/tests/AsynchT/Sender/AsynchTA_conn_i.cpp:
          Removed these files.
        * connectors/ami4ccm/tests/AsynchT/Sender/AsynchT_Sender.mpc:
        * connectors/ami4ccm/tests/AsynchT/Sender/AsynchT_Sender_exec.h:
        * connectors/ami4ccm/tests/AsynchT/Sender/AsynchT_Sender_exec.cpp:
          Updated to use the new AMI reply handler executor implementation
          skeleton generated in de _exec.* files instead of separate
          _conn_i.* files.

Wed Dec  8 10:59:48 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tools/IDL3_to_XMI/IDL3_TO_XMI.mpc:
          Added dance_xml_utils parent to CIAO_IDL3_TO_XMI_EXE. It's needed
          on static builds.

Mon Dec  6 15:40:12 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        *connectors/tests/AMIDDS/Base/AmiDds_Base.mpc:
        *connectors/ami4ccm/examples/Hello/Base/Hello.mpc:
        Removed -Gex option and includes of conn_i files.

Mon Dec  6 14:25:12 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/tutorials/Hello/Hello_asm/Sender_comp/src/Hello_Sender_comp_exec.h:
        Solve memory leak.

Mon Dec  6 14:03:12 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/tutorials/Hello/Hello_asm/Sender_comp/src/Hello_Sender_comp_exec.cpp:
        * connectors/ami4ccm/tutorials/Hello/Hello_asm/Sender_comp/src/Hello_Sender_comp_exec.h:
        Activate sendc functions.

Mon Dec  6 12:15:12 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/tests/AMIDDS/Sender/AmiDds_Sender_exec.cpp:
        * connectors/tests/AMIDDS/Sender/AmiDds_Sender_exec.h:
        * connectors/ami4ccm/tests/GetComp/descriptors/run_test.pl:
        * connectors/ami4ccm/examples/Hello/Sender/Hello_Sender_exec.cpp: